# merx

./: Cargo.toml  README.md
benches/: benchmark.rs
examples/: readme_example.rs
src/: fixed.rs  lib.rs
src/asset/: asset.rs  mod.rs  test.rs
src/utils/: mod.rs  numeric_methods.rs
