[package]
name = "merx"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
criterion = { version = "0.3", features=['real_blackbox'] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true
