[package]
name = "merx"
version = "0.0.1"
authors = ["Filippo Merli <fmerli1@gmail.com>"]
license = "MIT OR Unlicense" 
description = "Merx is a library useful to talk about quantities in a safe way and with an eye on the performance."
repository = "https://github.com/fi3/merx/"
keywords = ["wrapper", "currency", "money", "financial", "fixed"]
categories = ["cryptography::cryptocurrencies", "data-structures", "mathematics", "science", "simulation"]
readme = "README.md"
edition = "2018"

[dependencies]

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
criterion = { version = "0.3", features=['real_blackbox'] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true
